--- a/assets/index.html
+++ b/assets/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <head>
     <title>ReloadCloud</title>
     <link rel="icon" type="img/png" href="img\ico\ReloadCloud_Favicon.png">
@@ -12,12 +11,13 @@
 </head>
 
 <body>
-    <div class="uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-background-cover uk-light" data-src="img\index\background.jpg" uk-img uk-height-viewport="offset-top: true">
+    <div class="uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-background-cover uk-dark uk-animation-fade" data-src="img\index\background.jpg" uk-img uk-height-viewport="offset-top: true">
+        
         <div class="uk-container">
             <div class="uk-grid-column-small uk-grid-row-large" uk-grid>
                 <div class="uk-flex-center">
                     <div>
-                        <h1>ReloadCloud</h1>
+                        <h1 class="uk-text-center uk-text-bolder">ReloadCloud</h1>
                     </div>
                 </div>   
             </div>
@@ -36,5 +36,4 @@
         </div>
     </div>
 </body>
-
 </html>
