--- a/assets/index.html
+++ b/assets/index.html
@@ -17,7 +17,7 @@
             <div class="uk-grid-column-small uk-grid-row-large" uk-grid>
                 <div class="uk-flex-center">
                     <div>
-                        <h1 class="uk-text-center uk-text-bolder">ReloadCloud</h1>
+                        <h1 class="uk-text-center uk-text-bolder">RavenCloud</h1>
                     </div>
                 </div>   
             </div>
