--- a/assets/index.html
+++ b/assets/index.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="js/uikit.min.js"></script>
     <script src="js/uikit-icons.min.js"></script>
+    <script src="js/typed.js"></script>
     <link rel="stylesheet" href="css/fontawesome.min.css">   
     <link rel="stylesheet" href="css/uikit.min.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/raleway.css">
+<style>
+
+</style>
 </head>
 
 <body>
@@ -17,7 +22,7 @@
             <div class="uk-grid-column-small uk-grid-row-large" uk-grid>
                 <div class="uk-flex-center">
                     <div>
-                        <h1 class="uk-text-center uk-text-bolder">RavenCloud</h1>
+                        <h1>RavenCloud</h1>                       
                     </div>
                 </div>   
             </div>
@@ -29,7 +34,8 @@
                 </div>
                 <div>   
                     <a class="uk-button uk-button-secondary" href="https://github.com/EarthlyEric/ReloadCloud">
-                        <i class="fab fa-github"> Github</i>
+                        <i class="fab fa-github"></i>
+                        Github
                     </a>
                 </div>       
             </div>
