--- a/assets/login.html
+++ b/assets/login.html
@@ -16,17 +16,19 @@
                 <div class="uk-grid-margin uk-grid uk-grid-stack" uk-grid>
                     <div class="uk-width-1-1@m">
                         <div class="uk-margin uk-width-large uk-margin-auto uk-card uk-card-default uk-card-body uk-box-shadow-large">
-                            <h1 class="uk-card-title uk-text-center">Welcome back!</h1>
+                            <h1 class="uk-card-title uk-text-center">Welcome back !</h1>
                             <form method="post" action="/login/auth">
                                 <div class="uk-margin">
                                     <div class="uk-inline uk-width-1-1">
-                                        <i class="fas fa-user"> Username</i>
+                                        <i class="fas fa-user"></i>
+                                        Usernames
                                         <input class="uk-input uk-form-large" type="text" name="username" ty>
                                     </div>
                                 </div>
                                 <div class="uk-margin">
                                     <div class="uk-inline uk-width-1-1">
-                                        <i class="fas fa-lock"> Password</i>
+                                        <i class="fas fa-lock"></i>
+                                        Password
                                         <input class="uk-input uk-form-large" type="password" name="password">	
                                     </div>
                                 </div>
