--- a/assets/login.html
+++ b/assets/login.html
@@ -7,6 +7,7 @@
     <script src="js/uikit-icons.min.js"></script>
     <link rel="stylesheet" href="css/fontawesome.min.css">   
     <link rel="stylesheet" href="css/uikit.min.css">
+    <link rel="stylesheet" href="css/raleway.css">
     <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
@@ -17,7 +18,7 @@
                     <div class="uk-width-1-1@m">
                         <div class="uk-margin uk-width-large uk-margin-auto uk-card uk-card-default uk-card-body uk-box-shadow-large">
                             <h1 class="uk-card-title uk-text-center">Welcome back !</h1>
-                            <form method="post" action="/login/auth">
+                            <form method="post" action="/login">
                                 <div class="uk-margin">
                                     <div class="uk-inline uk-width-1-1">
                                         <i class="fas fa-user"></i>
