--- a/assets/index.html
+++ b/assets/index.html
@@ -5,40 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="js/uikit.min.js"></script>
     <script src="js/uikit-icons.min.js"></script>
-    <link rel="stylesheet" href="css/fontawesome.min.css">   
-    <link rel="stylesheet" href="css/uikit.min.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/fontawesome.min.css">   
+    <link rel="stylesheet" href="css/uikit.min.css"> 
     <link rel="stylesheet" href="css/raleway.css">
 <style>
 
 </style>
 </head>
+    
+<body style="background-color: #0a061e;">
 
-<body>
-    <div class="uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-background-cover uk-dark uk-animation-fade" data-src="img\index\background.jpg" uk-img uk-height-viewport="offset-top: true">
-        
-        <div class="uk-container">
-            <div class="uk-grid-column-small uk-grid-row-large" uk-grid>
-                <div class="uk-flex-center">
-                    <div>
-                        <h1>RavenCloud</h1>                       
-                    </div>
-                </div>   
-            </div>
-            <div class="uk-grid-row-large uk-flex-center uk-text-center " uk-grid>
-                <div>   
-                    <a class="uk-button uk-button-secondary" href="/login">
-                        Login
-                    </a>
+    <div class="uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-light" uk-height-viewport="offset-top: true">
+    <div class="uk-container">
+        <div class="uk-grid-column-small uk-grid-row-large" uk-grid>
+            <div class="uk-flex-center">
+                <div>
+                    <h1>RavenCloud</h1>                       
                 </div>
-                <div>   
-                    <a class="uk-button uk-button-secondary" href="https://github.com/EarthlyEric/ReloadCloud">
-                        <i class="fab fa-github"></i>
-                        Github
-                    </a>
-                </div>       
+            </div>   
+        </div>
+        <div class="uk-grid-row-large uk-flex-center uk-text-center " uk-grid>
+            <div>   
+                <a class="light_button" href="/login">
+                    Login
+                </a>
             </div>
+            <div>   
+                <a class="light_button" href="https://github.com/EarthlyEric/ReloadCloud">
+                    <i class="fab fa-github"></i>
+                    Github
+                </a>
+            </div>       
         </div>
     </div>
+</div>
 </body>
 </html>
