--- a/assets/index.html
+++ b/assets/index.html
@@ -14,31 +14,31 @@
 </style>
 </head>
     
-<body style="background-color: #0a061e;">
-
+<body>
     <div class="uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-light" uk-height-viewport="offset-top: true">
-    <div class="uk-container">
-        <div class="uk-grid-column-small uk-grid-row-large" uk-grid>
-            <div class="uk-flex-center">
-                <div>
-                    <h1>RavenCloud</h1>                       
-                </div>
-            </div>   
-        </div>
-        <div class="uk-grid-row-large uk-flex-center uk-text-center " uk-grid>
-            <div>   
-                <a class="light_button" href="/login">
-                    Login
-                </a>
+        <div class="uk-container">
+            <div class="uk-grid-column-small uk-grid-row-large" uk-grid>
+                <div class="uk-animation-fade">
+                    <div>
+                        <h1 class="uk-text-center">RavenCloud</h1>                       
+                    </div>
+                </div>   
             </div>
-            <div>   
-                <a class="light_button" href="https://github.com/EarthlyEric/ReloadCloud">
-                    <i class="fab fa-github"></i>
-                    Github
-                </a>
-            </div>       
+            <div class="uk-grid-row-large uk-flex-center uk-text-center " uk-grid>
+                <div>   
+                    <a class="light_button uk-animation-fade" href="/login">
+                        <i class="fas fa-sign-in-alt"></i>
+                        Login
+                    </a>
+                </div>
+                <div>   
+                    <a class="light_button uk-animation-fade" href="https://github.com/EarthlyEric/ReloadCloud">
+                        <i class="fab fa-github"></i>
+                        Github
+                    </a>
+                </div>       
+            </div>
         </div>
     </div>
-</div>
 </body>
 </html>
