--- a/assets/login.html
+++ b/assets/login.html
@@ -11,18 +11,19 @@
     <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
-    <div class="uk-section uk-section-muted uk-flex uk-flex-middle uk-animation-fade" uk-height-viewport>
+    <div class="uk-flex uk-flex-middle uk-animation-fade" uk-height-viewport>
         <div class="uk-width-1-1">
             <div class="uk-container">
                 <div class="uk-grid-margin uk-grid uk-grid-stack" uk-grid>
                     <div class="uk-width-1-1@m">
                         <div class="uk-margin uk-width-large uk-margin-auto uk-card uk-card-default uk-card-body uk-box-shadow-large">
+                            <h1 class="uk-card-title uk-text-center">RavenCloud</h1>
                             <h1 class="uk-card-title uk-text-center">Welcome back !</h1>
                             <form method="post" action="/login">
                                 <div class="uk-margin">
                                     <div class="uk-inline uk-width-1-1">
                                         <i class="fas fa-user"></i>
-                                        Usernames
+                                        Username
                                         <input class="uk-input uk-form-large" type="text" name="username" ty>
                                     </div>
                                 </div>
