--- a/assets/404.html
+++ b/assets/404.html
@@ -1,40 +1,31 @@
 <!DOCTYPE html>
 <head>
-    <title>ReloadCloud</title>
+    <title>404 - ReloadCloud</title>
     <link rel="icon" type="img/png" href="img\ico\ReloadCloud_Favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="js/uikit.min.js"></script>
     <script src="js/uikit-icons.min.js"></script>
-    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/fontawesome.min.css">   
-    <link rel="stylesheet" href="css/uikit.min.css"> 
+    <link rel="stylesheet" href="css/uikit.min.css">
     <link rel="stylesheet" href="css/raleway.css">
-<style>
-
-</style>
+    <link rel="stylesheet" href="css/404.css">
 </head>
-    
+</head>
 <body>
     <div class="uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-light" uk-height-viewport="offset-top: true">
         <div class="uk-container">
             <div class="uk-grid-column-small uk-grid-row-large uk-animation-fade" uk-grid>
                 <div>
-                    <h1 class="uk-text-center">RavenCloud</h1>                       
-                </div>  
+                    <h1 class="uk-text-center">404 Page Not Found</h1>                       
+                </div>   
             </div>
             <div class="uk-grid-column-small uk-grid-row-large uk-animation-fade" uk-grid>
-                <div>   
-                    <a class="light_button" href="/login">
-                        <i class="fas fa-sign-in-alt"></i>
-                        Login
-                    </a>
-                </div>
-                <div>   
-                    <a class="light_button" href="https://github.com/EarthlyEric/ReloadCloud">
-                        <i class="fab fa-github"></i>
-                        Github
-                    </a>
-                </div>       
+                <div>
+                    <a class="uk-flek uk-flex-center light_button_big" href="/">
+                        <i class="fas fa-angle-left"></i>
+                        Let's Go Back !
+                    </a>                       
+                </div>   
             </div>
         </div>
     </div>
