--- a/assets/login.html
+++ b/assets/login.html
@@ -23,8 +23,8 @@
                                 <div class="uk-margin">
                                     <div class="uk-inline uk-width-1-1">
                                         <i class="fas fa-user"></i>
-                                        Username
-                                        <input class="uk-input uk-form-large" type="text" name="username" ty>
+                                        Email
+                                        <input class="uk-input uk-form-large" type="text" name="email" ty>
                                     </div>
                                 </div>
                                 <div class="uk-margin">
