--- a/assets/index.html
+++ b/assets/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>ReloadCloud</title>
-    <link rel="icon" type="img/png" href="img\ico\ReloadCloud_Favicon.png">
+    <link rel="icon" type="img/png" href="img\ico\RavenCloud_Favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="js/uikit.min.js"></script>
     <script src="js/uikit-icons.min.js"></script>
@@ -17,12 +17,12 @@
 <body>
     <div class="uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-light" uk-height-viewport="offset-top: true">
         <div class="uk-container">
-            <div class="uk-grid-column-small uk-grid-row-large uk-animation-fade" uk-grid>
+            <div class="uk-grid-column-large uk-grid-row-large uk-flex-center uk-animation-fade" uk-grid>
                 <div>
-                    <h1 class="uk-text-center">RavenCloud</h1>                       
+                    <img src="img/index/RavenCloud_Banner.png" width="450px" height="150px">                      
                 </div>  
             </div>
-            <div class="uk-grid-column-small uk-grid-row-large uk-animation-fade" uk-grid>
+            <div class="uk-grid-column-large uk-grid-row-small uk-flex-center uk-animation-fade" uk-grid>
                 <div>   
                     <a class="light_button" href="/login">
                         <i class="fas fa-sign-in-alt"></i>
