--- a/assets/login.html
+++ b/assets/login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Login - ReloadCloud</title>
+    <title>Login - RavenCloud</title>
     <link rel="icon" type="img/png" href="img\ico\RavenCloud_Favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="js/uikit.min.js"></script>
