--- a/assets/404.html
+++ b/assets/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>404 - RavenCloud</title>
-    <link rel="icon" type="img/png" href="img\ico\RavenCloud_Favicon.png">
+    <link rel="icon" type="img/png" href="img/ico/RavenCloud_Favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="js/uikit.min.js"></script>
     <script src="js/uikit-icons.min.js"></script>
@@ -16,7 +16,7 @@
         <div class="uk-container">
             <div class="uk-grid-column-small uk-grid-row-large uk-animation-fade" uk-grid>
                 <div>
-                    <h1 class="uk-text-center">404 Page Not Found</h1>                       
+                    <img src="img/404/RavenCloud_404.gif" width="450px" height="150px">                      
                 </div>   
             </div>
             <div class="uk-grid-column-small uk-grid-row-large uk-animation-fade" uk-grid>
