fix some problem

--- a/assets/index.html
+++ b/assets/index.html
@@ -19,7 +19,7 @@
         <div class="uk-container">
             <div class="uk-grid-column-large uk-grid-row-large uk-flex-center uk-animation-fade" uk-grid>
                 <div>
-                    <img src="img/index/RavenCloud_Banner.png" width="450px" height="150px">                      
+                    <img alt="RavenCloud Banner" src="img/index/RavenCloud_Banner.png" width="450px" height="150px">                      
                 </div>  
             </div>
             <div class="uk-grid-column-large uk-grid-row-small uk-flex-center uk-animation-fade" uk-grid>
