--- a/assets/index.html
+++ b/assets/index.html
@@ -1,42 +1,43 @@
 <!DOCTYPE html>
-<head>
-    <title>RavenCloud</title>
-    <link rel="icon" type="img/png" href="img/ico/RavenCloud_Favicon.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="js/uikit.min.js"></script>
-    <script src="js/uikit-icons.min.js"></script>
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/fontawesome.min.css">   
-    <link rel="stylesheet" href="css/uikit.min.css"> 
-    <link rel="stylesheet" href="css/raleway.css">
-<style>
-
-</style>
-</head>
+<html lang="en">
+    <head>
+        <title>RavenCloud</title>
+        <link rel="icon" type="img/png" href="img/ico/RavenCloud_Favicon.png">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script src="js/uikit.min.js"></script>
+        <script src="js/uikit-icons.min.js"></script>
+        <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="css/fontawesome.min.css">   
+        <link rel="stylesheet" href="css/uikit.min.css"> 
+        <link rel="stylesheet" href="css/raleway.css">
+    <style>
     
-<body>
-    <div class="uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-light" uk-height-viewport="offset-top: true">
-        <div class="uk-container">
-            <div class="uk-grid-column-large uk-grid-row-large uk-flex-center uk-animation-fade" uk-grid>
-                <div>
-                    <img alt="RavenCloud Banner" src="img/index/RavenCloud_Banner.png" width="450px" height="150px">                      
-                </div>  
-            </div>
-            <div class="uk-grid-column-large uk-grid-row-small uk-flex-center uk-animation-fade" uk-grid>
-                <div>   
-                    <a class="light_button" href="/login">
-                        <i class="fas fa-sign-in-alt"></i>
-                        Login
-                    </a>
+    </style>
+    </head>
+        
+    <body>
+        <div class="uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-light" uk-height-viewport="offset-top: true">
+            <div class="uk-container">
+                <div class="uk-grid-column-large uk-grid-row-large uk-flex-center uk-animation-fade" uk-grid>
+                    <div>
+                        <img alt="RavenCloud Banner" src="img/index/RavenCloud_Banner.png" width="450px" height="150px">                      
+                    </div>  
                 </div>
-                <div>   
-                    <a class="light_button" href="https://github.com/EarthlyEric/ReloadCloud">
-                        <i class="fab fa-github"></i>
-                        Github
-                    </a>
-                </div>       
+                <div class="uk-grid-column-large uk-grid-row-small uk-flex-center uk-animation-fade" uk-grid>
+                    <div>   
+                        <a class="light_button" href="/login">
+                            <i class="fas fa-sign-in-alt"></i>
+                            Login
+                        </a>
+                    </div>
+                    <div>   
+                        <a class="light_button" href="https://github.com/EarthlyEric/ReloadCloud">
+                            <i class="fab fa-github"></i>
+                            Github
+                        </a>
+                    </div>       
+                </div>
             </div>
         </div>
-    </div>
-</body>
+    </body>
 </html>
