--- a/assets/404.html
+++ b/assets/404.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
-<head>
-    <title>404 - RavenCloud</title>
-    <link rel="icon" type="img/png" href="img/ico/RavenCloud_Favicon.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="js/uikit.min.js"></script>
-    <script src="js/uikit-icons.min.js"></script>
-    <link rel="stylesheet" href="css/fontawesome.min.css">   
-    <link rel="stylesheet" href="css/uikit.min.css">
-    <link rel="stylesheet" href="css/raleway.css">
-    <link rel="stylesheet" href="css/404.css">
-</head>
-</head>
-<body>
-    <div class="uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-light" uk-height-viewport="offset-top: true">
-        <div class="uk-container">
-            <div class="uk-grid-column-small uk-grid-row-large uk-animation-fade" uk-grid>
-                <div>
-                    <img src="img/404/RavenCloud_404.gif" width="450px" height="150px">                      
-                </div>   
-            </div>
-            <div class="uk-grid-column-small uk-grid-row-large uk-animation-fade" uk-grid>
-                <div>
-                    <a class="uk-flek uk-flex-center light_button_big" href="/">
-                        <i class="fas fa-angle-left"></i>
-                        Let's Go Back !
-                    </a>                       
-                </div>   
+<html lang="en">
+    <head>
+        <title>404 - RavenCloud</title>
+        <link rel="icon" type="img/png" href="img/ico/RavenCloud_Favicon.png">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script src="js/uikit.min.js"></script>
+        <script src="js/uikit-icons.min.js"></script>
+        <link rel="stylesheet" href="css/fontawesome.min.css">   
+        <link rel="stylesheet" href="css/uikit.min.css">
+        <link rel="stylesheet" href="css/raleway.css">
+        <link rel="stylesheet" href="css/404.css">
+    </head>
+    </head>
+    <body>
+        <div class="uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-light" uk-height-viewport="offset-top: true">
+            <div class="uk-container">
+                <div class="uk-grid-column-small uk-grid-row-large uk-animation-fade" uk-grid>
+                    <div>
+                        <img src="img/404/RavenCloud_404.gif" width="450px" height="150px">                      
+                    </div>   
+                </div>
+                <div class="uk-grid-column-small uk-grid-row-large uk-animation-fade" uk-grid>
+                    <div>
+                        <a class="uk-flek uk-flex-center light_button_big" href="/">
+                            <i class="fas fa-angle-left"></i>
+                            Let's Go Back !
+                        </a>                       
+                    </div>   
+                </div>
             </div>
         </div>
-    </div>
-</body>
+    </body>
 </html>
