--- a/assets/login.html
+++ b/assets/login.html
@@ -1,57 +1,58 @@
 <!DOCTYPE html>
-<head>
-    <title>Login - RavenCloud</title>
-    <link rel="icon" type="img/png" href="img/ico/RavenCloud_Favicon.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="js/uikit.min.js"></script>
-    <script src="js/uikit-icons.min.js"></script>
-    <link rel="stylesheet" href="css/fontawesome.min.css">   
-    <link rel="stylesheet" href="css/uikit.min.css">
-    <link rel="stylesheet" href="css/raleway.css">
-    <link rel="stylesheet" href="css/login.css">
-</head>
-<body>
-    <div class="uk-flex uk-flex-middle uk-animation-fade" uk-height-viewport>
-        <div class="uk-width-1-1">
-            <div class="uk-container">
-                <div class="uk-grid-margin uk-grid uk-grid-stack" uk-grid>
-                    <div class="uk-width-1-1@m">
-                        <div class="uk-margin uk-width-large uk-margin-auto uk-card uk-card-default uk-card-body uk-box-shadow-large">
-                            <div class="uk-flex uk-flex-center">
-                                <img src="img/login/RavenCloud_Icon.png" width="64px" height="64px">
-                            </div>
-                            <div class="uk-text-center">
-                                <p>RavenCloud</p>
-                            </div>
-                            
-                            <h1 class="uk-card-title uk-text-center">Welcome back !</h1>
-                            <form method="post" action="/login">
-                                <div class="uk-margin">
-                                    <div class="uk-inline uk-width-1-1">
-                                        <i class="fas fa-user"></i>
-                                        Email
-                                        <input class="uk-input uk-form-large" type="text" name="email" ty>
+<html lang="en">
+    <head>
+        <title>Login - RavenCloud</title>
+        <link rel="icon" type="img/png" href="img/ico/RavenCloud_Favicon.png">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script src="js/uikit.min.js"></script>
+        <script src="js/uikit-icons.min.js"></script>
+        <link rel="stylesheet" href="css/fontawesome.min.css">   
+        <link rel="stylesheet" href="css/uikit.min.css">
+        <link rel="stylesheet" href="css/raleway.css">
+        <link rel="stylesheet" href="css/login.css">
+    </head>
+    <body>
+        <div class="uk-flex uk-flex-middle uk-animation-fade" uk-height-viewport>
+            <div class="uk-width-1-1">
+                <div class="uk-container">
+                    <div class="uk-grid-margin uk-grid uk-grid-stack" uk-grid>
+                        <div class="uk-width-1-1@m">
+                            <div class="uk-margin uk-width-large uk-margin-auto uk-card uk-card-default uk-card-body uk-box-shadow-large">
+                                <div class="uk-flex uk-flex-center">
+                                    <img src="img/login/RavenCloud_Icon.png" width="64px" height="64px">
+                                </div>
+                                <div class="uk-text-center">
+                                    <p>RavenCloud</p>
+                                </div>
+                                
+                                <h1 class="uk-card-title uk-text-center">Welcome back !</h1>
+                                <form method="post" action="/login">
+                                    <div class="uk-margin">
+                                        <div class="uk-inline uk-width-1-1">
+                                            <i class="fas fa-user"></i>
+                                            Email
+                                            <input class="uk-input uk-form-large" type="text" name="email" ty>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="uk-margin">
-                                    <div class="uk-inline uk-width-1-1">
-                                        <i class="fas fa-lock"></i>
-                                        Password
-                                        <input class="uk-input uk-form-large" type="password" name="password">	
+                                    <div class="uk-margin">
+                                        <div class="uk-inline uk-width-1-1">
+                                            <i class="fas fa-lock"></i>
+                                            Password
+                                            <input class="uk-input uk-form-large" type="password" name="password">	
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="uk-margin">
-                                    <button class="uk-button uk-button-primary uk-button-large uk-width-1-1" type="submit">Login</button>
-                                </div>
-                                <div class="uk-text-small uk-text-center">
-                                    Want to Go Home Page ? <a href="/">Click Here</a>
-                                </div>
-                            </form>
+                                    <div class="uk-margin">
+                                        <button class="uk-button uk-button-primary uk-button-large uk-width-1-1" type="submit">Login</button>
+                                    </div>
+                                    <div class="uk-text-small uk-text-center">
+                                        Want to Go Home Page ? <a href="/">Click Here</a>
+                                    </div>
+                                </form>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</body>
+    </body>
 </html>
