--- a/assets/login.html
+++ b/assets/login.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="css/login.css">
     </head>
     <body>
+        {{style | safe}}
         <div class="uk-flex uk-flex-middle uk-animation-fade" uk-height-viewport>
             <div class="uk-width-1-1">
                 <div class="uk-container">
